# ChangeLog for sci-libs/cln
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/cln/ChangeLog,v 1.65 2013/08/13 15:57:50 bicatali Exp $

  13 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> cln-1.3.3.ebuild:
  Fix sandbox violation in doc building (bug #480844), more cleanup

*cln-1.3.3 (12 Aug 2013)

  12 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> +cln-1.3.3.ebuild,
  metadata.xml:
  Version bump

  14 Jan 2013; Justin Lecher <jlec@gentoo.org> -cln-1.3.1.ebuild,
  -cln-1.3.2.ebuild, metadata.xml:
  Drop old, fixes #303189 & #444450

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> cln-1.3.2-r1.ebuild:
  Stable for arm, wrt bug #446100

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> cln-1.3.2-r1.ebuild:
  Stable for alpha, wrt bug #446100

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> cln-1.3.2-r1.ebuild:
  Stable for sparc, wrt bug #446100

  18 Dec 2012; Agostino Sarubbo <ago@gentoo.org> cln-1.3.2-r1.ebuild:
  Stable for ia64, wrt bug #446100

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> cln-1.3.2-r1.ebuild:
  Stable for x86, wrt bug #446100

  09 Dec 2012; Agostino Sarubbo <ago@gentoo.org> cln-1.3.2-r1.ebuild:
  Stable for ppc64, wrt bug #446100

  07 Dec 2012; Agostino Sarubbo <ago@gentoo.org> cln-1.3.2-r1.ebuild:
  Stable for ppc, wrt bug #446100

  07 Dec 2012; <ago@gentoo.org> cln-1.3.2-r1.ebuild:
  Stable for amd64, wrt bug #446100

  05 Dec 2012; Jeroen Roovers <jer@gentoo.org> cln-1.3.2-r1.ebuild:
  Stable for HPPA (bug #446100).

*cln-1.3.2-r1 (10 Oct 2012)

  10 Oct 2012; Justin Lecher <jlec@gentoo.org> cln-1.3.1.ebuild,
  +cln-1.3.2-r1.ebuild, +files/cln-1.3.2-arm.patch,
  +files/cln-1.3.2-s390x.patch, metadata.xml:
  Import some arm and s390x related patches from fedora, move to
  autotools-utils.eclass; add missing eclass

*cln-1.3.2 (13 Jun 2011)

  13 Jun 2011; Sébastien Fabbro <bicatali@gentoo.org> +cln-1.3.2.ebuild: