@@ -7,13 +7,13 @@ AUX cln-1.3.2-s390x.patch 1154 SHA256 75ce241b1a0fa9031effec9ede426e50081b6fc33b
 DIST cln-1.3.2.tar.bz2 1275638 SHA256 5c70c46b953b3b71ed2a2e28362b9adfacfae24b2b678d81bcc053ab779e7173 SHA512 3a0340f7a9205bfbb033591246e36f419c687081191152e873f1172379de155180f7b969b7f559abccf64f470942bd0ac0674c43f6523499322fb492c2c33726 WHIRLPOOL 5aa4f59da5b3af949dfd985f767bc5744b4f218a8035faa031528c2c4589e24a1269b448ea523c57e4378922dd9ab433cad2f9e2b9954d8bdfbdca2fbb7c6b68
 DIST cln-1.3.3.tar.bz2 1300229 SHA256 57fc2ee3ecbb30d4037ff32a9a331804ea7dad8b345e70d42d9991ca659b2612 SHA512 ee829cd03a2d36215a4d4e76cc0aa6c5abe6ff967ed366d752da1dc0c47dbec56e0521e92fb35574c038305fb767991c5c7fd12ad03583080da3f923fbfecdaf WHIRLPOOL fac646fcb8622060917cbe08b232d412459e45f16c4bbe38cd6d1b7296bc259466eba28ddccb66ead435832ea45127e13b4fe0e2601a0f763487144c02e51eb0
 EBUILD cln-1.3.2-r1.ebuild 1505 SHA256 671edf98205790fc5abb302eb829f6e58a8f0ac61d7d2ec14d7c430703c5e3cd SHA512 418730afe08861b6b488f4b86af1b6b26e7d32e430f86d96439c0d54e5a98ab28899cee2ff50c88401d6b0eee134e028c15b63ce6094ea3e351e13e5cd5f1620 WHIRLPOOL 558b7ec824b5515642e061fe8cd6e231f4bb84efd9a915be0063956e7b53ddcbc1dc101ec35d4677130e130bc2590ba327cd1cb126dd76c21c7bbf0a1336cb4e
-EBUILD cln-1.3.3.ebuild 1432 SHA256 cd2a64e2a5e6c15b64f61cd99e0d0d54ce0e8a831d66678e4cd2f4875c9f9292 SHA512 aacfbd783c62f8c957a2ada3e0edc8828c340c049fb643fc7f3499be51b66fe421f0f4651e88e58ef0afda998e1899466666f27fba864e59f7fe9331867af2f5 WHIRLPOOL 586ac65ae0f7be550233f6daf36b626bdc7f4bf09c8a2e3a7de20fc963f4665af1e4f1054acbe4ed59c6903f1c86db0902f7ae87b93cf0c77822c39723e43b60
-MISC ChangeLog 9378 SHA256 f696c3d9f8a5f2d74a32e5d3450287643c667586659ffe037ffc368817163ee6 SHA512 a7c3c0f8637e6384ae7d94e10b628987a29457e923df83c0abeb57589f8389c61ba65f54854adbdb79c34248f0c5a0cebeb967ba24532bbe36b5194dd0407f75 WHIRLPOOL 908740b5ccb4908aac79be0f1090b787a8c0c4a2b29b0e064e6a00ba1d7d56614204fd48a2518ba2c68f2cb60b29751731f0d4364f9934c568b014683b5c6d98
+EBUILD cln-1.3.3.ebuild 1426 SHA256 f459c2ed0a287d6bc280acd7a3aaf2e64e858d0615c9bad10ab6f23266b9d941 SHA512 67cca6b0c4061024e66eac2be7e342641c2742efdebb023c08a2e1a64c251773921aa3178eab48cc7795132a1070a9769aebf86aa7642406a37a2ee54364cb40 WHIRLPOOL d29467786ffb92709932c21665c4a70e1012a3ad29727ab91820b354a1e83d6c25ca449ee1bd76b9bdb9cab9d201e615eccd028822d3769a8b78befeedd7b8a4
+MISC ChangeLog 9472 SHA256 21c516bf194f97244ef460a86b078bf61b6229dcb2a662e38daabe4007fa0308 SHA512 9586d62462be8fb0b8a25fe2e56d8454aa13862e219eae109ea87e358dc1995be499bf61500e6a1b1e02791ed93491d938a9d2a47188a90afdba72a80068e6d0 WHIRLPOOL ac5adf440c63f06a369c5c25c2ce2ff03bbf25b135c1bccbc1fdff1a9b0df27555798d447c477a0f4800b5c5e6604f9931280441fa6b0bd6fdd169007058ba89
 MISC metadata.xml 593 SHA256 d7f828add4f742b5a7672ec92b76f6c1f5ab7e568f5d620d2373cdeb3524be81 SHA512 ef155d165096a6bc3d6a8df16e510d439ec6496cdb339f486e76a91abd5797025eb6684a46f357874b38cdc2cfee71405cbb3781ceeb9633bb4884eb3d3d1a0c WHIRLPOOL a77a171ff339b571c4cc283e3243915f1f471a606bea64e9ccf0e8b12a2652deee2c37346a1d032cf8404c44c9e949da6b21f3e8f2378da6d40ece4e1b67af72
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlIKV4QACgkQ1ycZbhPLE2AETgCgnYfsOO3M6g2qcolwZkoZy5v+
-DbcAniCkDCbVedd/R/DAlcSYUeDTj+xg
-=Ep6f
+iEYEAREIAAYFAlUfm9UACgkQVWmRsqeSphPQqQCfRUraG8p9RmNbeHHv/drhDiwa
+AsgAnR6uw4NSnhtNnhvfyilqkdidhbaR
+=UPwk
 -----END PGP SIGNATURE-----
