@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/cln
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/cln/ChangeLog,v 1.65 2013/08/13 15:57:50 bicatali Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/cln/ChangeLog,v 1.66 2015/04/04 08:07:47 jer Exp $
+
+  04 Apr 2015; Jeroen Roovers <jer@gentoo.org> cln-1.3.3.ebuild:
+  Stable for HPPA (bug #545420).
 
   13 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> cln-1.3.3.ebuild:
   Fix sandbox violation in doc building (bug #480844), more cleanup
